<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.replyEditor.CustomReplyEditorActivity">

            <!-- Auto reply text area -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/autoReplyTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/autoReplyTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mainAutoReplyLabel" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <!-- Save Button -->
            <Button
                android:id="@+id/saveCustomReplyBtn"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/save"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/autoReplyTextInputLayout" />


            <CheckBox
                android:id="@+id/appendAttribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/append_autoreply_arribution_checkbox_label"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorControlNormal"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/saveCustomReplyBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>